# terminal_chat

./: .gitignore  CMakeLists.txt  README.md  generate_certs.bat  generate_certs.sh
.github/workflows/: verify.yaml
client/: CMakeLists.txt
client/include/client/net/: secure_client.hpp
client/src/: main.cpp
client/src/net/: secure_client.cpp
common/: CMakeLists.txt
common/include/common/: logger.hpp
common/src/: logger.cpp
protocol/: CMakeLists.txt
protocol/include/protocol/: frames.hpp
protocol/src/: framing.cpp
server/: CMakeLists.txt
server/include/server/core/: server.hpp
server/include/server/net/: secure_session.hpp
server/src/: main.cpp
server/src/core/: server.cpp
server/src/net/: secure_session.cpp
tests/: CMakeLists.txt  common_tests.cpp  test_client.cpp  test_common.cpp  test_protocol.cpp  test_server.cpp
